[package]
name = "replace-in-file-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.7.0"
chrono = "0.4.34"
csv = "1.3.0"
fltk = { version = "^1.4", features = ["fltk-bundled"] }
dhat = "0.3.3"
csv-index = "0.1.6"
encoding_rs = "0.8.13"
encoding_rs_io = "0.1.3"
